# django-brick-astley

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
docs/: api.rst  conf.py  guide.rst
docs/_build/html/: .buildinfo  api.html  genindex.html  guide.html  index.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  environment.pickle  guide.doctree  index.doctree  quickstart.doctree
docs/_build/html/_sources/: index.rst.txt  quickstart.rst.txt
example/: .gitignore  README.md  manage.py  pyproject.toml
example/demo/: asgi.py  settings.py  urls.py  wsgi.py
example/djengademo/: asgi.py  settings.py  urls.py  wsgi.py
example/website/: bricks.py  components.py  urls.py
example/website/templates/: base.html
example/website/templates/bricks/: alert.html  button.html  card.html
example/website/templates/website/: index.html
src/brickastley/: autodiscover.py  brick.py
src/brickastley/templatetags/: brickastley.py
src/djenga/: __init__.py  apps.py  autodiscover.py  component.py  registry.py  urls.py
src/djenga/templatetags/: djenga.py
tests/: settings.py  test_basic.py  test_brick.py  test_component.py  test_registry.py  test_templatetags.py  urls.py
